Add responsive html5 to meta description

--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		  content="Maria D. Campbell's Online Portfolio Site, Web Developer and Web Development Teaching Resume">
+		  content="Maria D. Campbell's Online Portfolio Site, Web Developer and Web Development Teaching Responsive HTML5 Resume">
 	<meta name="keywords"
 		  content="Babel JavaScript Compiler, CSS, CSS3, CSS Flexbox, Command Line Interface, CSS Grid, Embedded JavaScript (EJS), ECMAScript 6 Plus, ES6 Modules, Express.js, Final Cut Pro, Git, Github, Heroku
 , Final Cut Pro, Git. Github, Heroku, HTML5, JetBrains, Jira, Modern JavaScript, MongoDB, Netlify, Netlify CMS, Node.js, NPM, PostreSQL, Python 3.8+, React, SASS (SCSS), Webpack, WordPress">
