--- a/resume.html
+++ b/resume.html
@@ -391,13 +391,15 @@
 						   noreferrer
 						   noopener">1-646-820-7539</a>
 					</p>
-					<p class="email"><strong>Email:</strong> <a
-						   href="mailto:interglobalmedia@gmail.com"
+					<p class="email"><strong><span
+								  class="type">Email</span>:</strong>
+						<a href="mailto:interglobalmedia@gmail.com"
 						   title="Email Maria D. Campbell"
 						   target="_blank"
 						   rel="
 						   noreferrer
-						   noopener">interglobalmedia@gmail.com</a></p>
+						   noopener">interglobalmedia@gmail.com</a>
+					</p>
 				</section>
 				<nav class="footer-nav">
 					<ul>
