Add modified submit.html removed png in navigation

--- a/submit.html
+++ b/submit.html
@@ -23,11 +23,7 @@
 		<header class="header">
 			<nav class="navbar">
 				<a href="index.html"
-				   class="logo">
-					<img class="brand"
-						 src="images/portfolio_brand.png"
-						 alt="brand">
-				</a>
+				   class="brand">MDC</a>
 				<button class="hamburger"></button>
 				<ul class="main-nav">
 					<li>
@@ -61,6 +57,7 @@
 	<footer class="site-credits">
 		<p>&#10013; © 2021 Maria D. Campbell &#10013;</p>
 	</footer>
+	<script src="scripts/hamburger.js"></script>
 </body>
 
 </html>
