--- a/submit.html
+++ b/submit.html
@@ -8,9 +8,9 @@
 	<title>Submit Form Page</title>
 	<meta name="description"
 		  content="">
-	<meta name="viewport"
-		  content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro"
+	<link rel="preconnect"
+		  href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
 		  rel="stylesheet">
 	<link rel="stylesheet"
 		  type="text/css"
