--- a/submit.html
+++ b/submit.html
@@ -3,19 +3,19 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible"
-		  content="IE=edge">
-	<title>Submit Form Page</title>
+	<meta name="viewport"
+		  content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		  content="">
+		  content="Submitted information to Maria D. Campbell via a demonstration-only (dummy) form on providing her with your contact information as well.">
+	<meta name="author"
+		  content="Maria D. Campbell">
+	<title>Submit Information to Maria D. Campbell</title>
 	<link rel="preconnect"
 		  href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
 		  rel="stylesheet">
 	<link rel="stylesheet"
-		  type="text/css"
-		  media="screen"
-		  href="styles/contact.css" />
+		  href="styles/contact.css">
 </head>
 
 <body>
@@ -24,7 +24,8 @@
 			<nav class="navbar">
 				<a href="index.html"
 				   class="brand">MDC</a>
-				<button class="hamburger"></button>
+				<button class="hamburger"
+						aria-label="Right Align"></button>
 				<ul class="main-nav">
 					<li>
 						<a class="menu-link"
@@ -50,7 +51,8 @@
 			</nav>
 		</header>
 		<article class="submit-article">
-			<h1 class="submit-main-heading">Your form submission was successful!
+			<h1 class="submit-main-heading">Your form submission was
+				successful!
 			</h1>
 		</article>
 	</main>
