--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"
-		  content="width=devie-width, initial-scale=1.0">
+		  content="width=device-width, initial-scale=1.0">
 	<meta name="description"
 		  content="Get to know Maria D. Campbell through her choice of favorite quotes and backdrop background images.">
 	<meta name="
