Add link-highlight.js to html pages

--- a/contact.html
+++ b/contact.html
@@ -133,6 +133,7 @@
 		<p>&#x2020; © 2021 Maria D. Campbell &#x2020;</p>
 	</footer>
 	<script src="scripts/hamburger.js"></script>
+	<script src="scripts/link-highlight.js"></script>
 </body>
 
 </html>
