--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
 	</footer>
 	<script src="scripts/hamburger.js"></script>
 	<script src="scripts/hover.js"></script>
+	<script src="scripts/link-highlight.js"></script>
 </body>
 
 </html>
