--- a/submit.html
+++ b/submit.html
@@ -45,7 +45,7 @@
 					</li>
 					<li>
 						<a class="menu-link"
-						   href="contact.html">Contact</a>
+						   href="submit.html">Submitted</a>
 					</li>
 				</ul>
 			</nav>
@@ -60,6 +60,7 @@
 		<p>&#x2020; © 2021 Maria D. Campbell &#x2020;</p>
 	</footer>
 	<script src="scripts/hamburger.js"></script>
+	<script src="scripts/link-highlight.js"></script>
 </body>
 
 </html>
