Add changes for figcaption content overlay

--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
 			<article class="landing-article">
 				<h2>I'm a full stack developer
 					and
-					designer.</h2>
-				<p>This site is a prototype for my Web Design 1 students
-					building their own personal portfolio sites. Explore this
-					site to learn more
-					about me.</p>
-				<a href="portfolio.html">Enter</a>
+					designer.<h2>
+						<p>This site is a prototype for my Web Design 1 students
+							building their own personal portfolio sites. Explore
+							this
+							site to learn more
+							about me.</p>
+						<a href="portfolio.html">Enter</a>
 			</article>
 		</section>
 	</main>
