--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<article class="landing-article">
 				<h2>I'm a full stack developer
 					and
-					designer.<h2>
+					designer.</h2>
 						<p>This site is a prototype for my Web Design 1 students
 							building their own personal portfolio sites. Explore
 							this
