Add body classes

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 		  href="styles/quote-cloud.css">
 </head>
 
-<body>
+<body class="about-body">
 	<main class="Site-content">
 		<header class="header">
 			<nav class="navbar">
