--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 		  href="styles/contact.css">
 </head>
 
-<body>
+<body class="contact-body">
 	<main class="Site-content">
 		<header class="header">
 			<nav class="navbar">
