--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		  href="styles/main.css">
 </head>
 
-<body>
+<body class="index-body">
 	<main class="Site-content">
 		<header class="index-header">
 			<nav class="navbar">
@@ -58,12 +58,12 @@
 				<h2>I'm a full stack developer
 					and
 					designer.</h2>
-						<p>This site is a prototype for my Web Design 1 students
-							building their own personal portfolio sites. Explore
-							this
-							site to learn more
-							about me.</p>
-						<a href="portfolio.html">Enter</a>
+				<p>This site is a prototype for my Web Design 1 students
+					building their own personal portfolio sites. Explore
+					this
+					site to learn more
+					about me.</p>
+				<a href="portfolio.html">Enter</a>
 			</article>
 		</section>
 	</main>
