--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 		  href="styles/main.css">
 </head>
 
-<body>
+<body class="portfolio-body">
 	<main class="Site-content">
 		<header class="header">
 			<nav class="navbar">
