--- a/submit.html
+++ b/submit.html
@@ -18,7 +18,7 @@
 		  href="styles/contact.css">
 </head>
 
-<body>
+<body class="submit-body">
 	<main class="Site-content">
 		<header class="header">
 			<nav class="navbar">
