--- a/about.html
+++ b/about.html
@@ -1,53 +1,40 @@
 <!DOCTYPE html>
-<html lang="en"
-	  dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport"
-		  content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		  content="Get to know Maria D. Campbell through her choice of favorite quotes and backdrop background images.">
+		content="Get to know Maria D. Campbell through her choice of favorite quotes and backdrop background images.">
 	<meta name="
-	  	  		  author"
-		  content="Maria D. Campbell">
+	  	  		  author" content="Maria D. Campbell">
 	<title>Maria D. Campbell's Favorite Quotes</title>
-	<link rel="preconnect"
-		  href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
-		  rel="stylesheet">
-	<link rel="stylesheet"
-		  href="styles/quote-cloud.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles/quote-cloud.css">
 </head>
 
 <body class="about-body">
 	<main class="Site-content">
 		<header class="header">
 			<nav class="navbar">
-				<a href="index.html"
-				   class="brand">MDC</a>
-				<button class="hamburger"
-						aria-label="Right-Align"></button>
+				<a href="index.html" class="brand">MDC</a>
+				<button class="hamburger" aria-label="Right-Align"></button>
 				<ul class="main-nav">
 					<li>
-						<a class="menu-link"
-						   href="index.html">Home</a>
+						<a class="menu-link" href="index.html">Home</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="portfolio.html">Portfolio</a>
+						<a class="menu-link" href="portfolio.html">Portfolio</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="resume.html">Résumé</a>
+						<a class="menu-link" href="resume.html">Résumé</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="about.html">About</a>
+						<a class="menu-link" href="about.html">About</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="contact.html">Contact</a>
+						<a class="menu-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</nav>
