--- a/contact.html
+++ b/contact.html
@@ -1,92 +1,63 @@
 <!DOCTYPE html>
-<html lang="en"
-	  dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport"
-		  content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		  content="How to contact Maria D. Campbell via email or cell phone and a demonstration-only (dummy) form on providing her with your contact information as well.">
+		content="How to contact Maria D. Campbell via email or cell phone and a demonstration-only (dummy) form on providing her with your contact information as well.">
 	<meta name="
-	  		  author"
-		  content="Maria D. Campbell">
+	  		  author" content="Maria D. Campbell">
 	<title>Contact Maria D. Campbell</title>
-	<link rel="preconnect"
-		  href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
-		  rel="stylesheet">
-	<link rel="stylesheet"
-		  href="styles/contact.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles/contact.css">
 </head>
 
 <body class="contact-body">
 	<main class="Site-content">
 		<header class="header">
 			<nav class="navbar">
-				<a href="index.html"
-				   class="brand">MDC</a>
-				<button class="hamburger"
-						aria-label="Right Align"></button>
+				<a href="index.html" class="brand">MDC</a>
+				<button class="hamburger" aria-label="Right Align"></button>
 				<ul class="main-nav">
 					<li>
-						<a class="menu-link"
-						   href="index.html">Home</a>
+						<a class="menu-link" href="index.html">Home</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="portfolio.html">Portfolio</a>
+						<a class="menu-link" href="portfolio.html">Portfolio</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="resume.html">Résumé</a>
+						<a class="menu-link" href="resume.html">Résumé</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="about.html">About</a>
+						<a class="menu-link" href="about.html">About</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="contact.html">Contact</a>
+						<a class="menu-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</nav>
 		</header>
 		<div class="contact-form-wrapper">
-			<form action="submit.html"
-				  id="userForm">
+			<form action="submit.html" id="userForm">
 				<h1 id="main-contact-heading">Contact Info for Maria</h1>
 				<fieldset>
 					<label for="firstname">First Name:</label>
-					<input type="text"
-						   name="firstname"
-						   id="firstname"
-						   placeholder="First Name here"
-						   required>
+					<input type="text" name="firstname" id="firstname" placeholder="First Name here" required>
 				</fieldset>
 				<fieldset>
 					<label for="lastname">Last Name:</label>
-					<input type="text"
-						   name="lastname"
-						   id="lastname"
-						   placeholder="Last Name here"
-						   required>
+					<input type="text" name="lastname" id="lastname" placeholder="Last Name here" required>
 				</fieldset>
 				<fieldset>
 					<label for="email">Email:</label>
-					<input type="email"
-						   name="email"
-						   id="email"
-						   placeholder="Email here"
-						   pattern="[a-z0-9._%+-]+@[a-z)-9.-]+\.[a-z]{2,}$"
-						   required>
+					<input type="email" name="email" id="email" placeholder="Email here"
+						pattern="[a-z0-9._%+-]+@[a-z)-9.-]+\.[a-z]{2,}$" required>
 				</fieldset>
 				<fieldset>
 					<legend>Submit Info:</legend>
-					<button type="submit"
-							form="userForm"
-							id="btn"
-							aria-label="Left Align">Submit
+					<button type="submit" form="userForm" id="btn" aria-label="Left Align">Submit
 					</button>
 				</fieldset>
 			</form>
@@ -109,19 +80,13 @@
 				<h2>Contact Maria</h2>
 				<div class="info-wrapper">
 					<fieldset>
-						<p class="tel"><strong><span
-									  class="type">Cell</span>:</strong>
-							<a href="tel:+1-646-820-7539"
-							   target="_blank"
-							   rel="
+						<p class="tel"><strong><span class="type">Cell</span>:</strong>
+							<a href="tel:+1-646-820-7539" target="_blank" rel="
 						   noreferrer
 						   noopener">1-646-820-7539</a>
 						</p>
-						<p class="email"><strong>Email:</strong> <a
-							   href="mailto:interglobalmedia@gmail.com"
-							   title="Email Maria D. Campbell"
-							   target="_blank"
-							   rel="
+						<p class="email"><strong>Email:</strong> <a href="mailto:interglobalmedia@gmail.com"
+								title="Email Maria D. Campbell" target="_blank" rel="
 						   noreferrer
 						   noopener">interglobalmedia@gmail.com</a></p>
 					</fieldset>
