--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 		  href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
 		  rel="stylesheet">
-	<link rel='stylesheet'
+	<link rel="stylesheet"
 		  href="styles/main.css">
 </head>
 
