--- a/submit.html
+++ b/submit.html
@@ -3,49 +3,37 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport"
-		  content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		  content="Submitted information to Maria D. Campbell via a demonstration-only (dummy) form on providing her with your contact information as well.">
-	<meta name="author"
-		  content="Maria D. Campbell">
+		content="Submitted information to Maria D. Campbell via a demonstration-only (dummy) form on providing her with your contact information as well.">
+	<meta name="author" content="Maria D. Campbell">
 	<title>Submit Information to Maria D. Campbell</title>
-	<link rel="preconnect"
-		  href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
-		  rel="stylesheet">
-	<link rel="stylesheet"
-		  href="styles/contact.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles/contact.css">
 </head>
 
 <body class="submit-body">
 	<main class="Site-content">
 		<header class="header">
 			<nav class="navbar">
-				<a href="index.html"
-				   class="brand">MDC</a>
-				<button class="hamburger"
-						aria-label="Right Align"></button>
+				<a href="index.html" class="brand">MDC</a>
+				<button class="hamburger" aria-label="Right Align"></button>
 				<ul class="main-nav">
 					<li>
-						<a class="menu-link"
-						   href="index.html">Home</a>
+						<a class="menu-link" href="index.html">Home</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="portfolio.html">Portfolio</a>
+						<a class="menu-link" href="portfolio.html">Portfolio</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="resume.html">Résumé</a>
+						<a class="menu-link" href="resume.html">Résumé</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="about.html">About</a>
+						<a class="menu-link" href="about.html">About</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="submit.html">Submitted</a>
+						<a class="menu-link" href="submit.html">Submitted</a>
 					</li>
 				</ul>
 			</nav>
