--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="about-body">
-	<main class="Site-content">
+	<div class="Site-content-wrapper">
 		<header class="header">
 			<nav class="navbar">
 				<a href="index.html" class="brand">MDC</a>
@@ -39,14 +39,16 @@
 				</ul>
 			</nav>
 		</header>
-		<section class="quote-container">
-			<h1>Favorite Quotes</h1>
-			<article class="quote-cloud">
-				<h2>Click for quote!</h2>
-				<blockquote></blockquote>
-			</article>
-		</section>
-	</main>
+		<main>
+			<section class="quote-container">
+				<h1>Favorite Quotes</h1>
+				<article class="quote-cloud">
+					<h2>Click for quote!</h2>
+					<blockquote></blockquote>
+				</article>
+			</section>
+		</main>
+	</div>
 	<footer class="site-credits">
 		<p>&#x2020; © 2021 Maria D. Campbell &#x2020;</p>
 	</footer>
