--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="contact-body">
-	<main class="Site-content">
+	<div class="Site-content-wrapper">
 		<header class="header">
 			<nav class="navbar">
 				<a href="index.html" class="brand">MDC</a>
@@ -39,7 +39,7 @@
 				</ul>
 			</nav>
 		</header>
-		<div class="contact-form-wrapper">
+		<main class="contact-form-wrapper">
 			<form action="submit.html" id="userForm">
 				<h1 id="main-contact-heading">Contact Info for Maria</h1>
 				<fieldset>
@@ -92,8 +92,8 @@
 					</fieldset>
 				</div>
 			</section>
-		</div>
-	</main>
+		</main>
+	</div>
 	<footer class="site-credits">
 		<p>&#x2020; © 2021 Maria D. Campbell &#x2020;</p>
 	</footer>
