--- a/index.html
+++ b/index.html
@@ -1,72 +1,61 @@
 <!DOCTYPE html>
-<html lang="en"
-	  dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport"
-		  content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		  content="Welcome to the landing page of Maria D. Campbell's portfolio site, where she can introduce herself to you!">
+		content="Welcome to the landing page of Maria D. Campbell's portfolio site, where she can introduce herself to you!">
 	<meta name="
-	  	  		  author"
-		  content="Maria D. Campbell">
+	  	  		  author" content="Maria D. Campbell">
 	<title>Maria D. Campbell's Portfolio Site Landing Page</title>
-	<link rel="preconnect"
-		  href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
-		  rel="stylesheet">
-	<link rel="stylesheet"
-		  href="styles/main.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body class="index-body">
-	<main class="Site-content">
+	<div class="Site-content-wrapper">
 		<header class="index-header">
 			<nav class="navbar">
-				<a href="index.html"
-				   class="brand">MDC</a>
-				<button class="hamburger"
-						aria-label="Right-Align"></button>
+				<a href="index.html" class="brand">MDC</a>
+				<button class="hamburger" aria-label="Right-Align"></button>
 				<ul class="main-nav">
 					<li>
-						<a class="menu-link"
-						   href="index.html">Home</a>
+						<a class="menu-link" href="index.html">Home</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="portfolio.html">Portfolio</a>
+						<a class="menu-link" href="portfolio.html">Portfolio</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="resume.html">Résumé</a>
+						<a class="menu-link" href="resume.html">Résumé</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="about.html">About</a>
+						<a class="menu-link" href="about.html">About</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="contact.html">Contact</a>
+						<a class="menu-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</nav>
 		</header>
-		<section class="landing-section">
-			<h1 id="landing-main-heading">Hi. I'm Maria.</h1>
-			<article class="landing-article">
-				<h2>I'm a full stack developer
-					and
-					designer.</h2>
-				<p>This site is a prototype for my Web Design 1 students
-					building their own personal portfolio sites. Explore
-					this
-					site to learn more
-					about me.</p>
-				<a href="portfolio.html">Enter</a>
-			</article>
-		</section>
-	</main>
+		<main>
+			<section class="landing-section">
+				<h1 id="landing-main-heading">Hi. I'm Maria.</h1>
+				<article class="landing-article">
+					<h2>I'm a full stack developer
+						and
+						designer.</h2>
+					<p>This site is a prototype for my Web Design 1 students
+						building their own personal portfolio sites. Explore
+						this
+						site to learn more
+						about me.</p>
+					<a href="portfolio.html">Enter</a>
+				</article>
+			</section>
+		</main>
+	</div>
 	<footer class="site-credits">
 		<p>&#x2020; © 2021 Maria D. Campbell &#x2020;</p>
 	</footer>
