--- a/portfolio.html
+++ b/portfolio.html
@@ -1,265 +1,244 @@
 <!DOCTYPE html>
-<html lang="en"
-	  dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport"
-		  content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		  content="Welcome to Maria D. Campbell's Portfolio Image Gallery, where she displays a curation of images of various bird species, hand picked from Creative Commons Search tool.">
+		content="Welcome to Maria D. Campbell's Portfolio Image Gallery, where she displays a curation of images of various bird species, hand picked from Creative Commons Search tool.">
 	<meta name="
-	  	  		  author"
-		  content="Maria D. Campbell">
+	  	  		  author" content="Maria D. Campbell">
 	<title>Maria D. Campbell's Portfolio Image Gallery
 	</title>
-	<link rel="preconnect"
-		  href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
-		  rel="stylesheet">
-	<link rel="stylesheet"
-		  href="styles/main.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body class="portfolio-body">
-	<main class="Site-content">
+	<div class="Site-content-wrapper">
 		<header class="header">
 			<nav class="navbar">
-				<a href="index.html"
-				   class="brand">MDC</a>
-				<button class="hamburger"
-						aria-label="Right Align"></button>
+				<a href="index.html" class="brand">MDC</a>
+				<button class="hamburger" aria-label="Right Align"></button>
 				<ul class="main-nav">
 					<li>
-						<a class="menu-link"
-						   href="index.html">Home</a>
+						<a class="menu-link" href="index.html">Home</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="portfolio.html">Portfolio</a>
+						<a class="menu-link" href="portfolio.html">Portfolio</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="resume.html">Résumé</a>
+						<a class="menu-link" href="resume.html">Résumé</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="about.html">About</a>
+						<a class="menu-link" href="about.html">About</a>
 					</li>
 					<li>
-						<a class="menu-link"
-						   href="contact.html">Contact</a>
+						<a class="menu-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</nav>
 
 		</header>
+		<main>
+			<h1 class="main-heading">Birds!</h1>
 
-		<h1 class="main-heading">Birds!</h1>
+			<article>
+				<h2 class="section-heading">Radiating Color</h2>
+				<section>
+					<figure>
+						<img src="https://live.staticflickr.com/2535/4188650592_d245f48434_b.jpg" alt="Nature bird">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/29468339@N02/4188650592">"Nature
+									bird"</a> by <a class="attribution-link"
+									href="https://www.flickr.com/photos/29468339@N02">@Doug88888</a>
+								is licensed under <a class="attribution-link"
+									href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html">CC
+									BY-NC-SA 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="https://live.staticflickr.com/4444/37481401541_3c87cc7771_b.jpg"
+							alt="To Brighten Up Even Your Darkest Night (Explored 10/3/17)">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/139235634@N04/37481401541">"To
+									Brighten Up Even Your Darkest Night (Explored
+									10/3/17)"</a> by <a class="attribution-link"
+									href="https://www.flickr.com/photos/139235634@N04">opheliosnaps</a>
+								is licensed under <a class="attribution-link"
+									href="https://creativecommons.org/publicdomain/mark/1.0/?ref=ccsearch&atype=html">CC
+									PDM 1.0</a>
+							</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="https://live.staticflickr.com/1423/1061723063_3904758493_b.jpg" alt="baby bird">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/28396605@N00/1061723063">"baby
+									bird"</a> by <a class="attribution-link"
+									href="https://www.flickr.com/photos/28396605@N00">paparutzi</a>
+								is licensed under <a class="attribution-link"
+									href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+									BY 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+				</section>
+			</article>
+			<article>
+				<h2 class="section-heading">Oh So Hungry!</h2>
+				<section>
+					<figure>
+						<img src="https://live.staticflickr.com/7272/7633179468_3e19e45a0c_b.jpg" alt="Bird on a Wire">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/50898682@N07/7633179468">"Bird
+									on a Wire"</a> by <a class="attribution-link"
+									href="https://www.flickr.com/photos/50898682@N07">AcrylicArtist</a>
+								is licensed under <a class="attribution-link"
+									href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+									BY 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="https://live.staticflickr.com/3767/9139004555_cbaa834ac6_b.jpg"
+							alt="Green bird with a popcorn">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/8070463@N03/9139004555">"Green
+									bird with a popcorn"</a> by <a class="attribution-link"
+									href="https://www.flickr.com/photos/8070463@N03">Tambako
+									the Jaguar</a> is licensed under <a class="attribution-link"
+									href="https://creativecommons.org/licenses/by-nd/2.0/?ref=ccsearch&atype=html">CC
+									BY-ND 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="https://live.staticflickr.com/3010/2570222219_5240589a47_b.jpg"
+							alt="Sparrowhawk with feather of a bird that seems to be very dead.">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/23566085@N00/2570222219">"Sparrowhawk
+									with feather of a bird that seems to be very
+									dead."</a> by <a class="attribution-link"
+									href="https://www.flickr.com/photos/23566085@N00">e³°°°</a>
+								is licensed under <a class="attribution-link"
+									href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html">CC
+									BY-SA 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+				</section>
+			</article>
+			<article>
+				<h2 class="section-heading">Majestic Poses and Flight</h2>
+				<section>
+					<figure>
+						<img src="https://live.staticflickr.com/185/461452977_d3bbab8f86_b.jpg" alt="Mynah bird">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/43145783@N00/461452977">"Mynah
+									bird"</a> by <a class="attribution-link"
+									href="https://www.flickr.com/photos/43145783@N00">foxypar4</a>
+								is licensed under <a class="attribution-link"
+									href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+									BY 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="https://live.staticflickr.com/5526/9459996145_5fd9a1249b_b.jpg" alt="Beautiful Bird">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/26811962@N05/9459996145">"Beautiful
+									Bird"</a> by <a class="attribution-link"
+									href="https://www.flickr.com/photos/26811962@N05">Steve
+									Wilson - over 10 million views Thanks
+									!!</a>
+								is licensed under <a class="attribution-link"
+									href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+									BY 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="https://live.staticflickr.com/7737/18013912912_7d73ebb325_b.jpg" alt="Bird in Flight">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/53986933@N00/18013912912">"Bird
+									in Flight"</a> by <a class="attribution-link"
+									href="https://www.flickr.com/photos/53986933@N00">snowpeak</a>
+								is licensed under <a class="attribution-link"
+									href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+									BY 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+				</section>
+			</article>
+			<article>
+				<h2 class="section-heading">Vulnerability Alert!</h2>
+				<section>
+					<figure>
+						<img src="https://live.staticflickr.com/2775/4484452509_c9a7f1edc1_b.jpg"
+							alt="Martin Mere Birds">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/93001633@N00/4484452509">"Martin
+									Mere Birds"</a> by
+								<a class="attribution-link"
+									href="https://www.flickr.com/photos/93001633@N00">BinaryApe</a>
+								is licensed under
+								<a class="attribution-link"
+									href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+									BY 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="https://live.staticflickr.com/3103/2551381540_4a052bf8c7_b.jpg"
+							alt="New Baby Bird Rehabbers">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/98799884@N00/2551381540">"New
+									Baby Bird Rehabbers"</a> by
+								<a class="attribution-link"
+									href="https://www.flickr.com/photos/98799884@N00">audreyjm529</a>
+								is licensed under
+								<a class="attribution-link"
+									href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+									BY 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="https://live.staticflickr.com/3473/3837748712_219ccf427b_b.jpg" alt="African Caracal">
+						<figcaption>
+							<p class="caption"><a class="attribution-link"
+									href="https://www.flickr.com/photos/44124348109@N01/3837748712">"African
+									Caracal"</a>
+								by
+								<a class="attribution-link"
+									href="https://www.flickr.com/photos/44124348109@N01">jurvetson</a>
 
-		<article>
-			<h2 class="section-heading">Radiating Color</h2>
-			<section>
-				<figure>
-					<img src="https://live.staticflickr.com/2535/4188650592_d245f48434_b.jpg"
-						 alt="Nature bird">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/29468339@N02/4188650592">"Nature
-								bird"</a> by <a class="attribution-link"
-							   href="https://www.flickr.com/photos/29468339@N02">@Doug88888</a>
-							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html">CC
-								BY-NC-SA 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="https://live.staticflickr.com/4444/37481401541_3c87cc7771_b.jpg"
-						 alt="To Brighten Up Even Your Darkest Night (Explored 10/3/17)">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/139235634@N04/37481401541">"To
-								Brighten Up Even Your Darkest Night (Explored
-								10/3/17)"</a> by <a class="attribution-link"
-							   href="https://www.flickr.com/photos/139235634@N04">opheliosnaps</a>
-							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/publicdomain/mark/1.0/?ref=ccsearch&atype=html">CC
-								PDM 1.0</a>
-						</p>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="https://live.staticflickr.com/1423/1061723063_3904758493_b.jpg"
-						 alt="baby bird">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/28396605@N00/1061723063">"baby
-								bird"</a> by <a class="attribution-link"
-							   href="https://www.flickr.com/photos/28396605@N00">paparutzi</a>
-							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
-								BY 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-			</section>
-		</article>
-		<article>
-			<h2 class="section-heading">Oh So Hungry!</h2>
-			<section>
-				<figure>
-					<img src="https://live.staticflickr.com/7272/7633179468_3e19e45a0c_b.jpg"
-						 alt="Bird on a Wire">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/50898682@N07/7633179468">"Bird
-								on a Wire"</a> by <a class="attribution-link"
-							   href="https://www.flickr.com/photos/50898682@N07">AcrylicArtist</a>
-							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
-								BY 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="https://live.staticflickr.com/3767/9139004555_cbaa834ac6_b.jpg"
-						 alt="Green bird with a popcorn">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/8070463@N03/9139004555">"Green
-								bird with a popcorn"</a> by <a
-							   class="attribution-link"
-							   href="https://www.flickr.com/photos/8070463@N03">Tambako
-								the Jaguar</a> is licensed under <a
-							   class="attribution-link"
-							   href="https://creativecommons.org/licenses/by-nd/2.0/?ref=ccsearch&atype=html">CC
-								BY-ND 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="https://live.staticflickr.com/3010/2570222219_5240589a47_b.jpg"
-						 alt="Sparrowhawk with feather of a bird that seems to be very dead.">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/23566085@N00/2570222219">"Sparrowhawk
-								with feather of a bird that seems to be very
-								dead."</a> by <a class="attribution-link"
-							   href="https://www.flickr.com/photos/23566085@N00">e³°°°</a>
-							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html">CC
-								BY-SA 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-			</section>
-		</article>
-		<article>
-			<h2 class="section-heading">Majestic Poses and Flight</h2>
-			<section>
-				<figure>
-					<img src="https://live.staticflickr.com/185/461452977_d3bbab8f86_b.jpg"
-						 alt="Mynah bird">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/43145783@N00/461452977">"Mynah
-								bird"</a> by <a class="attribution-link"
-							   href="https://www.flickr.com/photos/43145783@N00">foxypar4</a>
-							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
-								BY 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="https://live.staticflickr.com/5526/9459996145_5fd9a1249b_b.jpg"
-						 alt="Beautiful Bird">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/26811962@N05/9459996145">"Beautiful
-								Bird"</a> by <a class="attribution-link"
-							   href="https://www.flickr.com/photos/26811962@N05">Steve
-								Wilson - over 10 million views Thanks
-								!!</a>
-							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
-								BY 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="https://live.staticflickr.com/7737/18013912912_7d73ebb325_b.jpg"
-						 alt="Bird in Flight">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/53986933@N00/18013912912">"Bird
-								in Flight"</a> by <a class="attribution-link"
-							   href="https://www.flickr.com/photos/53986933@N00">snowpeak</a>
-							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
-								BY 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-			</section>
-		</article>
-		<article>
-			<h2 class="section-heading">Vulnerability Alert!</h2>
-			<section>
-				<figure>
-					<img src="https://live.staticflickr.com/2775/4484452509_c9a7f1edc1_b.jpg"
-						 alt="Martin Mere Birds">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/93001633@N00/4484452509">"Martin
-								Mere Birds"</a> by
-							<a class="attribution-link"
-							   href="https://www.flickr.com/photos/93001633@N00">BinaryApe</a>
-							is licensed under
-							<a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
-								BY 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="https://live.staticflickr.com/3103/2551381540_4a052bf8c7_b.jpg"
-						 alt="New Baby Bird Rehabbers">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/98799884@N00/2551381540">"New
-								Baby Bird Rehabbers"</a> by
-							<a class="attribution-link"
-							   href="https://www.flickr.com/photos/98799884@N00">audreyjm529</a>
-							is licensed under
-							<a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
-								BY 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="https://live.staticflickr.com/3473/3837748712_219ccf427b_b.jpg"
-						 alt="African Caracal">
-					<figcaption>
-						<p class="caption"><a class="attribution-link"
-							   href="https://www.flickr.com/photos/44124348109@N01/3837748712">"African
-								Caracal"</a>
-							by
-							<a class="attribution-link"
-							   href="https://www.flickr.com/photos/44124348109@N01">jurvetson</a>
-
-							is licensed under
-							<a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
-								BY 2.0</a>
-						</p>
-					</figcaption>
-				</figure>
-			</section>
-		</article>
-	</main>
+								is licensed under
+								<a class="attribution-link"
+									href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+									BY 2.0</a>
+							</p>
+						</figcaption>
+					</figure>
+				</section>
+			</article>
+		</main>
+	</div>
 	<footer class="site-credits">
 		<p>&#x2020; © 2021 Maria D. Campbell &#x2020;</p>
 	</footer>
