--- a/submit.html
+++ b/submit.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="submit-body">
-	<main class="Site-content">
+	<div class="Site-content-wrapper">
 		<header class="header">
 			<nav class="navbar">
 				<a href="index.html" class="brand">MDC</a>
@@ -38,12 +38,14 @@
 				</ul>
 			</nav>
 		</header>
-		<article class="submit-article">
-			<h1 class="submit-main-heading">Your form submission was
-				successful!
-			</h1>
-		</article>
-	</main>
+		<main>
+			<article class="submit-article">
+				<h1 class="submit-main-heading">Your form submission was
+					successful!
+				</h1>
+			</article>
+		</main>
+	</div>
 	<footer class="site-credits">
 		<p>&#x2020; © 2021 Maria D. Campbell &#x2020;</p>
 	</footer>
